# NetMHCPanCrawler

./: .gitignore  README.md  crawler.py  main.py  pyproject.toml  requirements.txt
allele_sets/: HLA_class_II_alleles_0_DR.txt  HLA_class_II_alleles_10_DR.txt  HLA_class_II_alleles_11_DR.txt  HLA_class_II_alleles_12_DR.txt  HLA_class_II_alleles_13_DR.txt  HLA_class_II_alleles_14_DR.txt  HLA_class_II_alleles_15_DR.txt  HLA_class_II_alleles_16_DR.txt  HLA_class_II_alleles_17_DR.txt  HLA_class_II_alleles_18_DR.txt  HLA_class_II_alleles_19_DR.txt  HLA_class_II_alleles_1_DR.txt  HLA_class_II_alleles_20_DR.txt  HLA_class_II_alleles_21_DR.txt  HLA_class_II_alleles_22_DR.txt  HLA_class_II_alleles_23_DR.txt  HLA_class_II_alleles_24_DR.txt  HLA_class_II_alleles_25_DR.txt  HLA_class_II_alleles_26_DR.txt  HLA_class_II_alleles_27_DR.txt  HLA_class_II_alleles_28_DR.txt  HLA_class_II_alleles_29_DR.txt  HLA_class_II_alleles_2_DR.txt  HLA_class_II_alleles_30_DR.txt  HLA_class_II_alleles_31_DR.txt  HLA_class_II_alleles_3_DR.txt  HLA_class_II_alleles_4_DR.txt  HLA_class_II_alleles_5_DR.txt  HLA_class_II_alleles_6_DR.txt  HLA_class_II_alleles_7_DR.txt  HLA_class_II_alleles_8_DR.txt  HLA_class_II_alleles_9_DR.txt  tushar_top_50_i_alleles_I.txt  tushar_top_50_ii_alleles_I.txt  tushar_top_50_iii_alleles_I.txt
src/netmhcpan/: app.py  crawler.py  peptide.py  utils.py
